fix(cta-signup): separate button when space is too narrow

--- a/scss/templates/components/cta-signup.scss
+++ b/scss/templates/components/cta-signup.scss
@@ -2,3 +2,13 @@
   width: auto;
   max-width: 100%;
 }
+
+.alert.alert-info.signup-cta {
+  margin-bottom: 1rem;
+}
+
+.buttons {
+  > button {
+    margin: 0 0 1rem;
+  }
+}
